Update zh-CN.json (#6)
* Update zh-CN.json

fixed some incorrect zh-cn translation

* Update zh-CN.json

fixed minor translation error

* Update zh-CN.json

improve great freeze translation in cn-zh

--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -96,14 +96,14 @@
   "raffle.noTicket": "未有奖券",
   "raffle.how": "您可以通过特殊活动和乡包佬送货免费领取奖券。",
   "raffle.enter": "投注",
-  "giftGiver.description": "恭喜，您找到了个送礼客！每天你们都可以找他们领一份免费礼物。",
+  "giftGiver.description": "恭喜，您找到了个送礼客！每天您都可以找他们领一份免费礼物。",
   "giftGiver.label": "送礼客",
   "beehive.harvestHoney": "收集蜂蜜",
   "beehive.noFlowersGrowing": "没有花卉生长",
   "beehive.beeSwarm": "蜂群",
   "beehive.honeyProductionPaused": "蜂蜜生产暂停",
   "beehive.yield": "产量",
-  "beehive.honeyPerFullHive": "1 蜂蜜 / 满蜂箱",
+  "beehive.honeyPerFullHive": "{{multiplier}} 蜂蜜 / 满蜂箱",
   "beehive.speed": "速度",
   "beehive.fullHivePerDay": "每天 {{speed}} 个 {{hive}}",
   "beehive.estimatedFull": "填满预计",
@@ -4223,7 +4223,7 @@
   "tornado.destroyed.one": "哦不！龙卷风正在摧毁你的农场！",
   "tornado.destroyed.two": "你的一些庄稼被摧毁了。",
   "tornado.destroyed.three": "你的一些建筑物遭到破坏。",
-  "tornado.specialEvent": "特别活动-龙卷风",
+  "tornado.specialEvent": "特别活动 - 龙卷风",
   "guide.factionPet.two": "你的阵营将有每周需要达到的目标经验值。如果派系达到目标，下周的目标将比前一周的目标高出 25%！如果未达到目标，它将重置回 1000 x 阵营成员。",
   "flowerBedGuide.buySeeds": "从市场购买种子。",
   "searchHere": "在这里搜索...",
@@ -4238,14 +4238,14 @@
   "tsunami.destroyed.one": "哦不！海啸正在摧毁你的农场！",
   "tsunami.destroyed.two": "你的一些庄稼被摧毁了。",
   "tsunami.destroyed.three": "你的一些建筑物遭到破坏。",
-  "tsunami.specialEvent": "特别活动-海啸",
+  "tsunami.specialEvent": "特别活动 - 海啸",
   "season.vip.purchase": "购买 VIP 访问权限",
   "vip.1Month": "1 个月",
   "vip.3Months": "3 个月",
   "vip.2Years": "2 年",
   "vip.3Months.discount": "八折优惠",
   "vip.purchase.title": "确认购买",
-  "vip.purchase.confirm": "你确定要购买 [0@/美元] 的 VIP 访问权限吗？",
+  "vip.purchase.confirm": "你确定要购买 {{name}} 的 VIP 访问权限吗？",
   "vip.benefits": "福利",
   "vip.oneYear.warning": "您已经拥有 1 年的 VIP 访问权限。",
   "vip.access": "VIP 访问权限",
@@ -4294,15 +4294,15 @@
   "powerSkills.reason.noBuildingsAreCooking": "没有建筑物在做饭",
   "powerSkills.reason.noFlowersGrowing": "花坛里没有开花",
   "powerSkills.reason.noOilreservesRefilling": "没有石油储备正在补充",
-  "greatFreeze.crops.frozen": "被大冻所冻结",
-  "greatFreeze.description": "很棒的冻结就是冻结你的农场！",
-  "greatFreeze.specialEvent": "特别活动-Great Freeze",
-  "greatFreeze.protected.one": "你保护了你的农场免受大冻伤害！",
-  "greatFreeze.protected.two": "你的庄稼都没有被冻结。",
-  "greatFreeze.destroyed.one": "哦不！很棒的冻结就是冻结你的农场！",
-  "greatFreeze.destroyed.two": "你的一些庄稼被冻结了。",
-  "calendar.events.greatFreeze.title": "大冻结",
-  "calendar.events.greatFreeze.description": "一场毁灭性的寒流使庄稼冻结。",
+  "greatFreeze.crops.frozen": "被霜冻所冻结",
+  "greatFreeze.description": "一场霜冻正在侵袭您的农场！",
+  "greatFreeze.specialEvent": "特别活动 - 霜冻",
+  "greatFreeze.protected.one": "您保护了您的农场免受霜冻伤害！",
+  "greatFreeze.protected.two": "您的庄稼都没有被冻结。",
+  "greatFreeze.destroyed.one": "哦不！霜冻把您的农场給冻结了！",
+  "greatFreeze.destroyed.two": "您的一些庄稼被冻结了。",
+  "calendar.events.greatFreeze.title": "霜冻",
+  "calendar.events.greatFreeze.description": "一场毁灭性的寒流，使部分庄稼被冻结了。",
   "description.basic.scarecrow.boost.skill": "-30% 增长时间",
   "description.scary.mike.boost.skill": "+0.3 中阶庄稼",
   "description.laurie.chuckle.crow.boost.skill": "+0.3 高阶庄稼",
@@ -4312,7 +4312,7 @@
   "skill.fishyFortune": "+100% 来自 Corale 送货的金币",
   "skill.midasSprint": "-10% 金脉恢复时间",
   "skill.midasRush": "-20% 金脉恢复时间",
-  "doubleDelivery.specialEvent": "特别活动-双酬送货",
+  "doubleDelivery.specialEvent": "特别活动 - 双酬送货",
   "doubleDelivery.one": "今天是一个特别的日子！送货值得双重奖励。",
   "doubleDelivery.two": "只有每个 bumpkin 或 goblin 当天首次送货的商品才能获得双倍奖励。",
   "calendar.events.doubleDelivery.title": "双酬送货",
@@ -4353,12 +4353,12 @@
   "crops.greenhouse": "温室",
   "crops.fruit": "水果",
   "crops.flower": "花",
-  "bountifulHarvest.specialEvent": "特别活动-丰收",
+  "bountifulHarvest.specialEvent": "特别活动 - 丰收",
   "bountifulHarvest.noticeboard.one": "今天是丰收的一天！",
   "bountifulHarvest.noticeboard.two": "您的庄稼、水果和温室庄稼今天将额外产生 +1。",
   "bountifulHarvest.noticeboard.three": "享受丰厚的奖励，充分利用这段繁荣的时光。",
   "calendar.events.bountifulHarvest.title": "丰收",
-  "insectPlague.specialEvent": "特别活动-虫害",
+  "insectPlague.specialEvent": "特别活动 - 虫害",
   "insectPlague.protected.one": "你保护了你的庄稼免受虫害的侵害！",
   "insectPlague.protected.two": "你的庄稼都没有受到影响。",
   "insectPlague.destroyed.one": "哦不！虫害正在侵扰你的庄稼！",
@@ -4369,9 +4369,9 @@
   "calendar.events.tsunami.prevention": "红树林",
   "calendar.events.greatFreeze.prevention": "热石",
   "calendar.events.sunshower.title": "日光浴",
-  "sunshower.info.one": "你的庄稼生长速度快了 2 倍！",
-  "sunshower.tooltip": "阳光明媚-作物速度提高了 2 倍。",
-  "sunshower.specialEvent": "特别活动-太阳雨",
+  "sunshower.info.one": "你的庄稼生长速度加速为 2 倍！",
+  "sunshower.tooltip": "阳光明媚 - 庄稼生长速度加速为 2 倍。",
+  "sunshower.specialEvent": "特别活动 - 太阳雨",
   "fullMoon.one": "所有茄子都一夜长出来了。",
   "fullMoon.two": "Betty 将供应 Duskberry、Lunara 和 Celestine 种子。",
   "fullMoon.three": "水里到处浮现奇怪生物。",
@@ -4471,7 +4471,7 @@
   "whatsOn.skillSystem": "新技能系统上线！",
   "whatsOn.april14th": "4 月 14 日",
   "whatsOn.may1st": "5 月 1 日",
-  "fishFrenzy.specialEvent": "特别活动-鱼潮狂欢",
+  "fishFrenzy.specialEvent": "特别活动 - 鱼潮狂欢",
   "fishFrenzy.info.one": "今天你的鱼捕量将增加 1！",
   "calendar.events.fishFrenzy.title": "鱼潮狂欢",
   "season.springDay": "春季",
@@ -4580,13 +4580,13 @@
   "season.codex.howToEarn.three": "交易牲畜和花卉赏金！({{date}})",
   "season.codex.mutants.four": "从奶牛身上收集牛奶来发现 {{item}}。",
   "season.codex.mutants.five": "从你的绵羊身上收集羊毛来发现 {{item}}。",
-  "competition.ended.description.two": "正在计算获胜者，并将于2月7日公布！",
+  "competition.ended.description.two": "正在计算获胜者，并将于 2 月 7 日公布！",
   "description.goldenSheep.boost": "免费喂绵羊！",
   "description.solAndLuna.boost": "2 倍制作速度",
   "description.blossomWard.boost": "春季时田坑庄稼产量 +1",
   "description.solflareAegis.boost": "夏季时田坑庄稼生长时间 -50%",
   "description.autumnsEmbrace.boost": "秋季时田坑庄稼生长时间 -50%",
-  "description.frozenHeart.boost": "冬季时田坑庄稼作物产量 +1",
+  "description.frozenHeart.boost": "冬季时田坑庄稼产量 +1",
   "vip.benefit.windOfChange": "风云变幻 VIP 收益率提升（+0.25 新庄稼）",
   "temperateSeason.possibleEventsDescription": "参观广场上的气象商店以保护您的农场！",
   "beds": "床",
@@ -4862,12 +4862,12 @@
   "chore.harvest.beetroot.90": "收获甜菜根 90 次",
   "chore.harvest.beetroot.100": "收获甜菜根 100 次",
   "chore.harvest.beetroot.120": "收获甜菜根 120 次",
-  "chore.harvest.pepper.25": "收获胡椒 25 次",
-  "chore.harvest.pepper.40": "收获胡椒 40 次",
-  "chore.harvest.pepper.50": "收获胡椒 50 次",
-  "chore.harvest.pepper.75": "收获胡椒 75 次",
-  "chore.harvest.pepper.80": "收获胡椒 80 次",
-  "chore.harvest.pepper.100": "收获胡椒 100 次",
+  "chore.harvest.pepper.25": "收获红椒 25 次",
+  "chore.harvest.pepper.40": "收获红椒 40 次",
+  "chore.harvest.pepper.50": "收获红椒 50 次",
+  "chore.harvest.pepper.75": "收获红椒 75 次",
+  "chore.harvest.pepper.80": "收获红椒 80 次",
+  "chore.harvest.pepper.100": "收获红椒 100 次",
   "chore.harvest.cauliflower.30": "收获花椰菜 30 次",
   "chore.harvest.cauliflower.60": "收获花椰菜 60 次",
   "chore.harvest.cauliflower.90": "收获花椰菜 90 次",
@@ -4887,27 +4887,27 @@
   "chore.harvest.wheat.250": "收获小麦 250 次",
   "chore.harvest.wheat.300": "收获小麦 300 次",
   "chore.harvest.wheat.360": "收获小麦 360 次",
-  "chore.harvest.radish.240": "收获萝卜 240 次",
-  "chore.harvest.radish.280": "收获萝卜 280 次",
-  "chore.harvest.radish.340": "收获萝卜 340 次",
-  "chore.harvest.turnip.250": "收获萝卜 250 次",
-  "chore.harvest.turnip.300": "收获萝卜 300 次",
-  "chore.harvest.turnip.360": "收获萝卜 360 次",
+  "chore.harvest.radish.240": "收获小萝卜 240 次",
+  "chore.harvest.radish.280": "收获小萝卜 280 次",
+  "chore.harvest.radish.340": "收获小萝卜 340 次",
+  "chore.harvest.turnip.250": "收获芜菁 250 次",
+  "chore.harvest.turnip.300": "收获芜菁 300 次",
+  "chore.harvest.turnip.360": "收获芜菁 360 次",
   "chore.harvest.kale.120": "收获羽衣甘蓝 120 次",
   "chore.harvest.kale.180": "收获羽衣甘蓝 180 次",
   "chore.harvest.kale.200": "收获羽衣甘蓝 200 次",
   "chore.harvest.kale.240": "收获羽衣甘蓝 240 次",
-  "chore.harvest.artichoke.150": "收获朝鲜蓟 150 次",
-  "chore.harvest.artichoke.200": "收获朝鲜蓟 200 次",
-  "chore.harvest.artichoke.260": "收获朝鲜蓟 260 次",
+  "chore.harvest.artichoke.150": "收获洋蓟 150 次",
+  "chore.harvest.artichoke.200": "收获洋蓟 200 次",
+  "chore.harvest.artichoke.260": "收获洋蓟 260 次",
   "chore.harvest.barley.100": "收获大麦 100 次",
   "chore.harvest.barley.120": "收获大麦 120 次",
   "chore.harvest.barley.150": "收获大麦 150 次",
   "chore.harvest.barley.180": "收获大麦 180 次",
   "chore.harvest.barley.200": "收获大麦 200 次",
-  "chore.harvest.rice.16": "收获大米 16 次",
-  "chore.harvest.rice.20": "收获大米 20 次",
-  "chore.harvest.rice.24": "收获大米 24 次",
+  "chore.harvest.rice.16": "收获稻米 16 次",
+  "chore.harvest.rice.20": "收获稻米 20 次",
+  "chore.harvest.rice.24": "收获稻米 24 次",
   "chore.harvest.olive.12": "收获橄榄 12 次",
   "chore.harvest.olive.16": "收获橄榄 16 次",
   "chore.harvest.olive.20": "收获橄榄 20 次",
@@ -5128,11 +5128,11 @@
   "statements.water.well.needed.two": "为了养活更多的庄稼，请建造一口井。",
   "statements.water.well.needed.three": "充分放水以支持更多庄稼",
   "statements.upgrade.water.well": "升级 Water Well 以支持更多庄稼",
-  "upgrade.intro.water.well": "嘿 Bumpkin！想升级你的 {{building}} 以提高地块的生育率吗？",
+  "upgrade.intro.water.well": "嘿 Bumpkin！想升级你的 {{building}} 增加田坑数量吗？",
   "upgrade.sheep.cows": "绵羊和奶牛",
   "upgrade.chickens": "鸡",
-  "upgrade.unlockAllPlots": "解锁所有剧情生育能力",
-  "upgrade.plusPlotFertility": "+ {{amount}} 绘制生育率",
+  "upgrade.unlockAllPlots": "解锁所有田坑",
+  "upgrade.plusPlotFertility": "+ {{amount}} 田坑数量",
   "upgrade.capacityIncrease": "+ {{amount}} 容量",
   "statements.switchToPolygon": "切换到 Polygon",
   "wallet.changeWallet": "更换钱包",
@@ -5151,9 +5151,9 @@
   "ronin.nft.expires": "这些福利不会永远持续下去，所以在它们持续的时候充分利用它们！",
   "description.genie.lamp": "一盏神灯，里面有一位精灵，他会满足您三个愿望，并在第三个愿望之后销毁神灯。愿望清单：Genie Bear、Pirate Bounty、Pearl、Bumpkin Roast、Goblin Brunch 和 Sand Drill x10",
   "description.genie.lamp.boost": "实现愿望清单中的 3 个愿望",
-  "description.tunnel.mole": "使石矿的产量提高 0.25％",
-  "description.rocky.the.mole": "使铁矿的产量提高了 0.25％",
-  "description.nugget": "使金矿的收益率提高了 0.25％",
+  "description.tunnel.mole": "使石脉的产量提高 0.25",
+  "description.rocky.the.mole": "使铁脉的产量提高 0.25",
+  "description.nugget": "使金脉的产量提高 0.25",
   "description.rock.golem": "有 10% 的几率获得 +2 石头",
   "wallet.RequiresPol": "铸造农场 NFT 需要 Polygon 网络和农场关联钱包中的 POL 代币",
   "description.thermalStone": "一块能保护你免受极度冻结的热石！仅限一次性使用。",
@@ -5185,7 +5185,7 @@
   "ronin.comingSoon": "4 月 1 日-使用 Ronin 钱包购买钻石、铸造 NFT、交易等！",
   "announcement.lockdown": "为了为 $FLOWER 做准备，从 3 月 24 日起将禁用 $SFL 提款和存款。",
   "announcement.flowerGems": "用 $FLOWER 购买钻石-2025 年 5 月上市",
-  "announcement.gasless": "无气交易将于 4 月 1 日开始。",
+  "announcement.gasless": "无燃气费交易将于 4 月 1 日开始。",
   "rocketman.intro": "你好 Bumpkin，我想建造一座通往月球的花塔！",
   "rocketman.flower.coming": "$FLOWER 来了",
   "rocketman.flower.launch": "4 月 1 日，$FLOWER 将加入游戏中！",
@@ -5207,7 +5207,7 @@
   "connectionTimeoutHeaderText": "连接超时",
   "connectionTimeoutMessageText": "连接已超时。",
   "timeoutHeaderText": "超时",
-  "timeoutMessageText": "在时间限制内，脸部不适合椭圆形。再试一次，在椭圆形中完全填满脸。",
+  "timeoutMessageText": "在时间限制内，脸部不适合椭圆形。再试一次，在椭圆形中完全填满人脸。",
   "faceDistanceHeaderText": "检测到向前移动",
   "faceDistanceMessageText": "连接时避免靠近。",
   "multipleFacesHeaderText": "检测到多张人脸",
@@ -5539,7 +5539,7 @@
   "flower.exchange.confirm": "您确定要进行以下交换吗？",
   "flower.exchange.error.min": "你不能兑换少于 50 个爱心护符",
   "flower.exchange.error.balance": "你没有足够的爱心护符来兑换 $FLOWER",
-  "flower.exchange.button": "交易所",
+  "flower.exchange.button": "兑换",
   "flower.exchange.youWillReceive": "您将收到：",
   "socialTask.referFriend.description": "使用您的推荐链接推荐朋友加入游戏——仅限第一次！一旦你的第一个朋友使用你的推荐链接，25个爱心护符就会被空投给你。",
   "socialTask.joinStream": "加入我们的每周直播，获取 alpha 版、更新和赠品！",
@@ -5862,20 +5862,20 @@
   "current.timezone": "当前时区：{{timeZone}}",
   "season.codex.auction.chapterSupply": "章节供应：{{chapterSupply}}",
   "season.codex.auction.chapterSupply.description": "一些物资可能会保留给将来的活动或章节。",
-  "transaction.whalePack": "只能用 FLOWER 购买鲸鱼配套。",
+  "transaction.whalePack": "只能用 FLOWER 购买鲸鱼优惠包。",
   "deposit.flower.guide": "要存款，请在您的个人钱包中切换到 {{network}} 网络，然后将 FLOWER 发送到如下所示的地址。",
-  "twitter.post.flower": "庆祝 $FLOWER 的推出！每周将选出 5 名获胜者，赢取额外的 100 美元鲜花！",
+  "twitter.post.flower": "庆祝 $FLOWER 的推出！每周将选出 5 名获胜者，赢取额外的 100 $FLOWER！",
   "flower.launch.one": "$FLOWER ERC20 已在 BASE 上线",
   "flower.launch.two": "存款已启用",
   "flower.launch.three": "流动性奖励和提款即将开始",
-  "deposit.items": "存款游戏物品",
+  "deposit.items": "存入游戏物品",
   "withdraw.sfl.available": "{{flower}} FLOWER 可供提款",
-  "withdraw.flower.limited": "在首次推出$FLOWER期间，您可以提取的$FLOWER金额是有限的。",
+  "withdraw.flower.limited": "在首次推出$FLOWER期间，您可以提取的 $FLOWER 金额是有限的。",
   "socialTask.merkl": "默克尔唱片奖励",
   "merkl.rewards": "默克尔奖励",
-  "merkl.description": "我们在默克尔的朋友正在向提供流动性以支持生态系统的社区成员赠送$FLOWER。",
+  "merkl.description": "我们在默克尔的朋友正在向提供流动性以支持生态系统的社区成员赠送 $FLOWER。",
   "merkl.disclaimer": "务必使用 DYOR，谨防诈骗。这不是一项投资",
   "merkl.one": "每天在 Merkl 应用程序中领取 FLOWER。",
-  "merkl.two": "根据排行榜，前 10、50 和 250 名提供商每天在游戏中获得奖励奖励",
+  "merkl.two": "根据排行榜，前 10、50 和 250 名提供商每天在游戏中获得奖励",
   "merkl.three": "所有供应商均可获得额外的食物盒和专属可穿戴设备！"
 }
