Chore/cn zh shinkan42 (#7)
* Update zh-CN.json

Standardize Love Charm words in chinese translate

* Update zh-CN.json

Updated Love Charm in chinese translation

* Update zh-CN.json

updated some of the translation (5,757 > 5,710)

* Update zh-CN.json

update bud chinese translation and update all auto translate for sunflowerland. also slightly tweak for some of the incorrect translation.

* Update zh-CN.json

updated some spacing

* Update zh-CN.json

* Update zh-CN.json

Updated Love Charm in chinese translation

* Update zh-CN.json

updated some of the translation (5,757 > 5,710)

* Update zh-CN.json

update bud chinese translation and update all auto translate for sunflowerland. also slightly tweak for some of the incorrect translation.

* Update zh-CN.json

updated some spacing

* Update zh-CN.json

* Revert "Update zh-CN.json"

This reverts commit e044766c09a332bb249d20fc3a2b2166bae1206a.

* Merge branch 'chore/cn-zh-shinkan42' of https://github.com/ShinKan42/Wheatcher-s-Hay-Fork into chore/cn-zh-shinkan42

* Update zh-CN.json

-) updated coins translation
-) fixed jellyfish translation error
-) fixed some of the incorrect translate on gold
-) improvise some translation for ease to understand

* Update zh-CN.json

updated chore name to show original name for food, fish and flower

* fixed chef apron boost translation

* Update zh-CN.json

Updated Love Charm in chinese translation

* Update zh-CN.json

updated some of the translation (5,757 > 5,710)

* Update zh-CN.json

update bud chinese translation and update all auto translate for sunflowerland. also slightly tweak for some of the incorrect translation.

* Update zh-CN.json

updated some spacing

* Update zh-CN.json

* Revert "Update zh-CN.json"

This reverts commit e044766c09a332bb249d20fc3a2b2166bae1206a.

* Merge branch 'chore/cn-zh-shinkan42' of https://github.com/ShinKan42/Wheatcher-s-Hay-Fork into chore/cn-zh-shinkan42

* Update zh-CN.json

* Update zh-CN.json

* Update zh-CN.json

fixed some of the 

--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5753,11 +5753,11 @@
   "maxPerPerson": "每位玩家至多：{{max}}",
   "stream.beginsSoon": "距离市政厅直播还剩：",
   "stream.isLive": "市政厅正在直播",
-  "description.bronzeLoveBox": "青铜爱心盒",
-  "description.silverLoveBox": "白银爱心盒",
-  "description.goldLoveBox": "黄金爱心盒",
+  "description.bronzeLoveBox": "青铜爱心箱",
+  "description.silverLoveBox": "白银爱心箱",
+  "description.goldLoveBox": "黄金爱心箱",
   "rewardBox.tapToOpen": "单击打开",
-  "floatingIsland.isLive": "神秘岛",
+  "floatingIsland.isLive": "浮空岛",
   "hotAirBalloon.readyToFly": "准备好升空了吗？",
   "hotAirBalloon.description": "你听说过神秘浮岛吗？只要时间掐准，我可以捎上你一程。",
   "hotAirBalloon.exchangeInfo": "用爱心护符兑换 $FLOWER 和奖励。",
@@ -5768,68 +5768,68 @@
   "hotAirBalloon.letsGo": "立刻启航",
   "description.barnBlueprint.boost1": "基础畜棚获得 +5 容纳上限",
   "description.barnBlueprint.boost2": "畜棚每次升级将获得 +5 最大容纳上限",
-  "description.bronzeFlowerBox": "青铜花盒",
-  "description.silverFlowerBox": "一个银色的花箱",
-  "description.goldFlowerBox": "一个金色的花箱",
+  "description.bronzeFlowerBox": "青铜货币箱",
+  "description.silverFlowerBox": "白银货币箱",
+  "description.goldFlowerBox": "黄金货币箱",
   "megastore.limit": "冷却时间：{{time}}",
   "megaBountyBoard.msg1": "欢迎来到超级赏金板！在时间用完之前，收集资源并用它们兑换奖励！",
-  "rewardShop.msg1": "欢迎来到我的奖励商店。收集爱心护符并用它们兑换稀有物品。每天都有新的价格和不同的物品！",
+  "rewardShop.msg1": "欢迎来到我的奖品商店。收集爱心护符并用它们兑换稀有物品。每天都有新的价格和不同的物品！",
   "rewardShop.msg2": "商店每 24 小时更换一次",
-  "megaBountyBoard.message": "欢迎来到超级赏金板！查看本周的赏金。如果你有任何需要的物品，你可以前往广场的 poppy 用它们兑换奖励！",
+  "megaBountyBoard.message": "欢迎来到超级赏金板！快看这周的赏金。您如果有这里需要的任何物品，都可以前往广场的 poppy 用它们兑换奖励！",
   "petalPuzzle.alreadyClaimed": "已经申领了",
-  "petalPuzzle.comeBackTomorrow": "你今天已经领取了奖励。明天再来。",
-  "petalPuzzle.congratulations": "恭喜，你们都解开了今天的谜题！",
-  "bounties.bonus.allCompleted": "所有赏金任务已完成！",
-  "bounties.bonus.headToPoppy": "前往 Poppy 领取奖励！",
+  "petalPuzzle.comeBackTomorrow": "您今天已经领取了奖励。明天再来吧。",
+  "petalPuzzle.congratulations": "恭喜，您们都解开了今天的谜题！",
+  "bounties.bonus.allCompleted": "所有赏金任务都已完成！",
+  "bounties.bonus.headToPoppy": "前往 Poppy 处领取奖励！",
   "bounties.bonus.clickToClaim": "申领奖励",
   "bounties.bonus.getBonus": "完成所有赏金任务可获得 50 {{seasonalTicket}} 的奖励！",
-  "description.bronzeFoodBox": "一个青铜食物盒",
-  "description.silverFoodBox": "一个银色的食物盒",
-  "description.goldFoodBox": "一个金色的食物盒",
-  "description.bronzeToolBox": "一个青铜工具箱",
-  "description.silverToolBox": "一个银色工具箱",
-  "description.goldToolBox": "一个金色的工具箱",
+  "description.bronzeFoodBox": "青铜食物箱",
+  "description.silverFoodBox": "白银食物箱",
+  "description.goldFoodBox": "黄金食物箱",
+  "description.bronzeToolBox": "青铜工具箱",
+  "description.silverToolBox": "白银工具箱",
+  "description.goldToolBox": "黄金工具箱",
   "description.testBox": "一个测试箱",
   "vip.benefit.stellaDiscounts": "Stella FLOWER 折扣 (50%)",
-  "vip.benefit.greatBloom": "Great Bloom VIP 2x 花盒奖励",
-  "whatsOn.vipPass": "获取 VIP 通行证以获得额外的 Geniseeds 和津贴！",
-  "whatsOn.ticketsEnd": "再也不会有 Geniseeds 了",
-  "whatsOn.ticketPaused": "Bumpkins 正在度假 —— 再也不会有来自农活和赏金的 Geniseeds 了。",
-  "whatsOn.greatBloom": "心花怒放",
-  "whatsOn.floatingIsland": "浮岛出现了。乘坐心形气球，用爱心护身符兑换奖励！",
-  "whatsOn.flowerPuzzle": "解开每日社区难题以获得额外奖励",
+  "vip.benefit.greatBloom": "<心花怒放> VIP 2x 花盒奖励",
+  "whatsOn.vipPass": "获取 VIP 通行证以获得额外的“创世灵种”和津贴！",
+  "whatsOn.ticketsEnd": "再也不会有“创世灵种”了",
+  "whatsOn.ticketPaused": "Bumpkins 正在度假 —— 暂时不会有来自农活和赏金的“创世灵种”了。",
+  "whatsOn.greatBloom": "<心花怒放>",
+  "whatsOn.floatingIsland": "浮岛出现了。乘坐热心气球，用爱心护身符兑换奖励！",
+  "whatsOn.flowerPuzzle": "解开每日社区谜题以获得额外奖励",
   "whatsOn.brokenPillars": "沙漠中出现了远古的断柱。你能找到他们吗？",
-  "whatsOn.megaBountyBoard": "Poppy 更新了她的超级赏金板。用鱼、宝藏 + 更多物品兑换章节代币",
+  "whatsOn.megaBountyBoard": "Poppy 更新了她的超级赏金板。用鱼、宝藏 + 更多物品兑换章节票券",
   "whatsOn.may5th": "5 月 5 日",
-  "whatsOn.genesisEarning": "完成农活、送货和赏金即可获得 Geniseeds！",
-  "whatsOn.genesisUsage": "收集足够的 Geniseeds，在超级商店和拍卖行购买 NFT。",
+  "whatsOn.genesisEarning": "完成农活、送货和赏金即可获得“创世灵种”！",
+  "whatsOn.genesisUsage": "收集足够的“创世灵种”，在超级商店和拍卖行购买 NFT。",
   "whatsOn.june23rd": "6 月 23 日",
   "whatsOn.august1st": "8 月 1 日",
   "whatsOn.coopSeason": "合作章节",
-  "whatsOn.coopSeasonText": "合作章节在这里。一种帮助朋友并获得奖励的新方法！",
-  "whatsOn.coopSeasonText2": "种植巨型庄稼，清理附近的农场，建立牢固的友谊。",
-  "news.greatBloom": "心花怒放",
-  "news.greatBloom.description": "心花怒放就在这里。为期 3 个月的竞赛，旨在赚取 Geniseed 代币并将其兑换 NFT 和 FLOWER。",
-  "whatsOn.flowerBox": "用 Geniseeds 兑换 $FLOWER Box",
-  "description.quarry": "这是一个永不枯竭的古老石头遗址，非常适合那些寻求稳定的免费石头供应的人。",
-  "description.obsidianTurtle": "这种古老的生物稳定而沉默，无论它在哪里漫游，都会收集火山石的痕迹。",
-  "description.winterGuardian": "从冰雪永不融化的土地上召唤，这名受冻伤的保护者现在可以监视天空——在陌生的风中是尊贵的客人。",
-  "description.summerGuardian": "这位 Guardian 是一位在无尽阳光下出生的火焰人物，将家乡的炎热带到了天空岛凉爽的高度。",
-  "description.springGuardian": "这种温柔的精神从远处肥沃的田野中醒来，如今在空中漂流的花园中孕育着生命。",
-  "description.autumnGuardian": "这位 Guardian 拥有丰收的色调和渴望的目光，将季节变化的精髓从遥远的土地带到了上方的王国。",
-  "description.skyPillar": "据说这些古老的柱子早于天空本身，其脉冲产生的能量使天空岛保持平衡。",
-  "description.flowerscribedStatue": "这座雕像由浅色石头雕刻而成，上面刻有古老的花卉诗句，洋溢着向日葵之地的宁静智慧。",
-  "description.balloonRug": "一款柔软、异想天开的地毯，手感比空气轻，非常适合时尚地休息。",
-  "description.giantYam": "如此巨大的根可以养活村庄，或者至少可以做成一道令人印象深刻的炖菜。",
-  "description.giantZuchinni": "这种素食大得难以置信，绿色可疑，是真正的花园奇迹。",
+  "whatsOn.coopSeasonText": "合作章节到来。一种帮助朋友并获得奖励的新方法！",
+  "whatsOn.coopSeasonText2": "种植巨型庄稼、清理邻近的农场、建立牢固的友谊。",
+  "news.greatBloom": "<心花怒放>",
+  "news.greatBloom.description": "<心花怒放>到来。在为期 3 个月的竞赛里，赚取“创世灵种”并用其兑换 NFT 和 FLOWER。",
+  "whatsOn.flowerBox": "用“创世灵种”兑换 $FLOWER Box",
+  "description.quarry": "这是一个永不枯竭的古老岩石遗址，非常适合那些寻求稳定、免费石头供应的人。",
+  "description.obsidianTurtle": "这种古老的生物镇定而沉默，无论它在哪里漫游，都会留下火山矿石的痕迹。",
+  "description.winterGuardian": "从冰雪永不融化的土地上召唤，这名与寒霜共生的保护者现在可以守望天空——在陌生冷风中的尊贵客人。",
+  "description.summerGuardian": "这位守护者是一位出生在在无尽阳光下的烈火人物，将家乡的炎热带到了天空岛凉爽的海拔。",
+  "description.springGuardian": "这种温柔的精魂从远处肥沃的田野中醒来，如今在空中漂流的花园中孕育着生命。",
+  "description.autumnGuardian": "这位守护者拥有丰收的色调和渴望的目光，将季节变化的精髓从遥远的土地带到了上空的王国。",
+  "description.skyPillar": "据说这些古老的柱子早于天空本身，其脉冲产生的能量使浮空岛保持平衡。",
+  "description.flowerscribedStatue": "这座雕像由浅色石头雕刻而成，上面刻有古老的花卉诗句，洋溢着 Sunflower Land 的宁静智慧。",
+  "description.balloonRug": "一款柔软、异想天开的地毯，手感比空气轻，休息也不忘时尚。",
+  "description.giantYam": "如此巨大的根可以养活全村，或者至少可以做成一道令人印象深刻的炖菜。",
+  "description.giantZuchinni": "这种素食大得难以置信，绿得诡异，是真正的花园奇迹。",
   "description.miniFloatingIsland": "一小片天堂，可以以某种方式维持生计，非常适合度过宁静的时光。",
-  "description.bonusGeniseed.boost": "+1 Geniseed",
-  "description.giantKale": "一只巨型羽衣甘蓝...",
+  "description.bonusGeniseed.boost": "+1 “创世灵种”",
+  "description.giantKale": "巨型羽衣甘蓝……",
   "description.giantKale.boost": "+2 羽衣甘蓝",
   "description.giantZuchinni.boost": "-50% 西葫芦生长时间",
   "description.giantYam.boost": "+0.5 山药",
   "description.oracleSyringe.boost": "免费治疗牲畜",
-  "description.quarry.boost": "无需用镐开采石脉",
+  "description.quarry.boost": "无需用十字镐开采石脉",
   "description.obsidianTurtle.boost": "+0.5 黑曜石",
   "description.winterGuardian.boost": "冬季灾难保护",
   "description.winterGuardian.boost2": "冬季祝福效果 x2 倍",
@@ -5841,41 +5841,41 @@
   "description.summerGuardian.boost2": "夏季祝福效果 x2 倍",
   "description.medicApron.boost": "使用 0.5 瓶 Barn Delight 治愈牲畜",
   "description.broccoliHat.boost": "-50% 西兰花生长时间",
-  "rocketman.flower.exchange.one": "乘坐 Heart Air Ballon 旅行，用 Love Charms 兑换 $FLOWER。",
+  "rocketman.flower.exchange.one": "乘坐热心气球旅行，用爱心护符兑换 $FLOWER。",
   "description.obsidianNecklace.boost": "-50% 岩浆池恢复速度",
   "description.redPepperOnesie.boost": "-25% 红椒生长时间",
-  "description.loveChicken": "一只充满爱与感情的变种鸡",
-  "description.drCow": "一头打扮成有爱心医生的变种牛",
+  "description.loveChicken": "充满爱与感情的变种鸡",
+  "description.drCow": "打扮成慈爱医生的变种牛",
   "description.drCow.boost": "-5% 奶牛饲料",
-  "description.nurseSheep": "作为一名温柔的护士，一只准备好提供帮助的变种绵羊",
+  "description.nurseSheep": "准备好作为一名温柔护士提供帮助的变种绵羊",
   "description.nurseSheep.boost": "夏季绵羊免疫疾病",
-  "description.pinkDolphin": "一种具有美丽粉色色调的稀有海豚",
-  "description.pinkDolphin.boost": "春季，鱼类捕捞量 +1",
-  "description.lunalist": "一件专用于月球的盛开神器。在 Great Bloom 章节中发现的一朵装饰性突变花",
-  "description.heartAirBalloon": "爱情的漂浮象征，随时准备振奋精神，振奋人心。+1 来自送货、农活和赏金的 Geniseeds。",
+  "description.pinkDolphin": "具有美丽粉色色调的稀有海豚",
+  "description.pinkDolphin.boost": "春季的鱼类捕捞量 +1",
+  "description.lunalist": "专用于月球的盛开神器。在<心花怒放>章节中发现的一朵装饰性突变花",
+  "description.heartAirBalloon": "爱意的漂浮象征，随时准备振奋精神、滋养心灵。+1 来自送货、农活和赏金的“创世灵种”。",
   "whatsOn.july28th": "7 月 28 日",
-  "description.geniseed": "在 Great Bloom 章节中使用的票券",
-  "interactableModals.petalClue.message1": "当花瓣呈橙色花朵时，会出现奖品。你能找到吗？",
-  "birdieplaza.choresAndRewards": "你还可以通过每周农活、每日宝箱奖励和赏金系统获得 {{seasonalTicket}} s！",
+  "description.geniseed": "在<心花怒放>章节中使用的票券",
+  "interactableModals.petalClue.message1": "当花瓣呈橙色花朵时，奖品会出现。您能找到吗？",
+  "birdieplaza.choresAndRewards": "您还可以通过每周农活、每日宝箱奖励和赏金系统获得 {{seasonalTicket}} ！",
   "ready.in": "准备好了",
-  "transaction.refresh.message": "看来您的交易已过期。请单击 “刷新” 重试。",
+  "transaction.refresh.message": "看来您的交易已过期。请单击“刷新”重试。",
   "current.timezone": "当前时区：{{timeZone}}",
   "season.codex.auction.chapterSupply": "章节供应：{{chapterSupply}}",
-  "season.codex.auction.chapterSupply.description": "一些物资可能会保留给将来的活动或章节。",
+  "season.codex.auction.chapterSupply.description": "一些供应可能会保留给将来的活动或章节。",
   "transaction.whalePack": "只能用 FLOWER 购买鲸鱼优惠包。",
   "deposit.flower.guide": "要存款，请在您的个人钱包中切换到 {{network}} 网络，然后将 FLOWER 发送到如下所示的地址。",
-  "twitter.post.flower": "庆祝 $FLOWER 的推出！每周将选出 5 名获胜者，赢取额外的 100 $FLOWER！",
+  "twitter.post.flower": "庆祝 $FLOWER 的发布！每周将选出 5 名获奖者，赢取额外的 100 $FLOWER！",
   "flower.launch.one": "$FLOWER ERC20 已在 BASE 上线",
   "flower.launch.two": "存款已启用",
   "flower.launch.three": "流动性奖励和提款即将开始",
   "deposit.items": "存入游戏物品",
   "withdraw.sfl.available": "{{flower}} FLOWER 可供提款",
-  "withdraw.flower.limited": "在首次推出$FLOWER期间，您可以提取的 $FLOWER 金额是有限的。",
-  "socialTask.merkl": "默克尔唱片奖励",
-  "merkl.rewards": "默克尔奖励",
-  "merkl.description": "我们在默克尔的朋友正在向提供流动性以支持生态系统的社区成员赠送 $FLOWER。",
-  "merkl.disclaimer": "务必使用 DYOR，谨防诈骗。这不是一项投资",
+  "withdraw.flower.limited": "在首次发布 $FLOWER 期间，您可以提取的 $FLOWER 金额是有限的。",
+  "socialTask.merkl": "Merkl 奖励",
+  "merkl.rewards": "Merkl 奖励",
+  "merkl.description": "我们在 Merkl 的朋友正在向提供流动性以支持生态系统的社区成员赠送 $FLOWER。",
+  "merkl.disclaimer": "务必注意调查了解，谨防诈骗。这不是一项投资",
   "merkl.one": "每天在 Merkl 应用程序中领取 FLOWER。",
-  "merkl.two": "根据排行榜，前 10、50 和 250 名提供商每天在游戏中获得奖励",
-  "merkl.three": "所有供应商均可获得额外的食物盒和专属可穿戴设备！"
+  "merkl.two": "根据排行榜，前 10、50 和 250 名提供者每天在游戏中获得奖励",
+  "merkl.three": "所有提供者均可获得额外的食物盒和专属穿戴品！"
 }
