[FIX] Stream Widget not showing when stream is currently live

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5956,7 +5956,7 @@
   "easter-eggstravaganza.portal.rewardMessage": "Congratulations, you completed the mission! Here is your reward.",
   "maxPerPerson": "Max per player: {{max}}",
   "stream.beginsSoon": "Town Hall Starts In",
-  "stream.isLive": "Town Hall",
+  "stream.isLive": "Town Hall is Live!",
   "description.bronzeLoveBox": "A bronze love box",
   "description.silverLoveBox": "A silver love box",
   "description.goldLoveBox": "A gold love box",
