--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5901,6 +5901,8 @@
   "streams.description": "Watch & listen to our team streams for alpha, updates & giveaways!",
   "streams.discord": "Discord",
   "streams.twitch": "Twitch",
+  "streams.tuesday.ongoing": "Discord Stream Ongoing",
+  "streams.friday.ongoing": "Twitch Stream Ongoing",
   "loveRush.dateRange": "April 7th - May 4th",
   "loveRush.description": "During Love Rush, help the Bumpkin NPCs and earn Love Charms!",
   "loveRush.deliveries": "Perform Bumpkin deliveries for Love Charms",
