[FEAT] Add flag and button

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6061,5 +6061,6 @@
   "flowerDashboard.topEarners": "Top Earners",
   "flowerDashboard.topBurners": "Top Burners",
   "flowerDashboard.title": "Flower Dashboard",
-  "flowerDashboard.last7Days": "Last 7 days"
+  "flowerDashboard.last7Days": "Last 7 days",
+  "flowerDashboard.comingSoon": "Coming Soon"
 }
