--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5418,7 +5418,7 @@
   "searchHere": "Search here...",
   "airdropping.reward": "Sending reward to player...",
   "airdropping.reward.success": "Reward successfully sent to player!",
-  "airdropping.reward.failed": "One or more airdrops failed. Airdrops failed to send to all players. Check #team-logs on Discord for more information",
+  "airdropping.reward.failed": "One or more airdrops failed. Check #team-logs on Discord for more information",
   "airdropping.reward.failed.title": "Airdrop failed",
   "sunflowerClock": "Sunflower Clock",
   "days.mon": "Mon.",
