[FEAT] Add back save 30% using FLOWER widget

--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -5183,6 +5183,7 @@
   "deposit.linkedWallet": "Billetera vinculada:",
   "deposit.refreshWallet": "Actualizar billetera",
   "ronin.comingSoon": "1 de abril: ¡Usa la billetera Ronin para comprar gemas, acuñar NFT, comerciar y más!",
+  "announcement.flowerGems": "Compra gemas con $FLOWER, disponible en mayo de 2025",
   "announcement.gasless": "Las transacciones sin gas llegarán el 1 de abril.",
   "rocketman.intro": "¡Hola, Bumpkin! ¡Estoy intentando construir una torre de flores para la luna!",
   "rocketman.flower.coming": "Se acerca $FLOWER",
