--- a/src/lib/i18n/dictionaries/fr.json
+++ b/src/lib/i18n/dictionaries/fr.json
@@ -5183,6 +5183,7 @@
   "deposit.linkedWallet": "Portefeuille lié :",
   "deposit.refreshWallet": "Actualiser le portefeuille",
   "ronin.comingSoon": "1er avril - Utilisez le portefeuille Ronin pour acheter des pierres précieuses, créer des NFT, échanger et plus encore !",
+  "announcement.flowerGems": "Achetez des pierres précieuses avec $FLOWER - à venir en mai 2025",
   "announcement.gasless": "Les transactions sans gaz auront lieu le 1er avril.",
   "rocketman.intro": "Howdy Bumpkin, j'essaie de construire un clocher fleuri sur la lune !",
   "rocketman.flower.coming": "$FLOWER arrive",
