--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -5183,6 +5183,7 @@
   "deposit.linkedWallet": "Carteira vinculada:",
   "deposit.refreshWallet": "Atualizar carteira",
   "ronin.comingSoon": "1º de abril - Use a carteira Ronin para comprar gemas, criar NFTs, negociar e muito mais!",
+  "announcement.flowerGems": "Compre joias com $ FLOWER - em maio de 2025",
   "announcement.gasless": "As transações sem gás estão chegando em 1º de abril.",
   "rocketman.intro": "Olá, Bumpkin, estou tentando construir uma torre de flores para a lua!",
   "rocketman.flower.coming": "$FLOWER está chegando",
