--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -5183,6 +5183,7 @@
   "deposit.linkedWallet": "Связанный кошелек:",
   "deposit.refreshWallet": "Обновить кошелек",
   "ronin.comingSoon": "1 апреля. Используйте кошелек Ronin для покупки драгоценных камней, создания NFT, торговли и многого другого!",
+  "announcement.flowerGems": "Покупайте драгоценные камни за $FLOWER - в мае 2025 года",
   "announcement.gasless": "Сделки без газа начнутся 1 апреля.",
   "rocketman.intro": "Привет, Бампкин, я пытаюсь построить цветочную башню на Луне!",
   "rocketman.flower.coming": "Скоро появится $FLOWER",
