--- a/src/lib/i18n/dictionaries/it.json
+++ b/src/lib/i18n/dictionaries/it.json
@@ -5183,6 +5183,7 @@
   "deposit.linkedWallet": "Portafoglio collegato:",
   "deposit.refreshWallet": "Aggiorna portafoglio",
   "ronin.comingSoon": "1 aprile - Usa il portafoglio Ronin per acquistare gemme, coniare NFT, fare trading e altro!",
+  "announcement.flowerGems": "Acquista gemme con $FLOWER - in arrivo a maggio 2025",
   "announcement.gasless": "Le transazioni senza gas arriveranno il 1 aprile.",
   "rocketman.intro": "Salve Bumpkin, sto cercando di costruire una torre di fiori sulla luna!",
   "rocketman.flower.coming": "$FLOWER sta arrivando",
