--- a/src/lib/i18n/dictionaries/ja.json
+++ b/src/lib/i18n/dictionaries/ja.json
@@ -5183,6 +5183,7 @@
   "deposit.linkedWallet": "リンクされたウォレット:",
   "deposit.refreshWallet": "ウォレットを更新",
   "ronin.comingSoon": "4月1日-Roninウォレットを使ってジェムの購入、NFTの発行、トレードなどを行いましょう！",
+  "announcement.flowerGems": "$FLOWERでジェムを購入-2025年5月発売予定",
   "announcement.gasless": "ガスレス取引は4月1日に行われます。",
   "rocketman.intro": "やあ、バンプキン、月に向けてフラワータワーを建てようとしてるんだ！",
   "rocketman.flower.coming": "$フラワーがやってくる",
