[FEAT] Airdrop Multiple Farms (#5553)
* [FEAT] Airdrop Multiple Farms

* Add Airdrop failed custom modal

* Edit failed airdrops text

* remove commented code

* Add Max Value for basic items

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5418,6 +5418,8 @@
   "searchHere": "Search here...",
   "airdropping.reward": "Sending reward to player...",
   "airdropping.reward.success": "Reward successfully sent to player!",
+  "airdropping.reward.failed": "One or more airdrops failed. Check #team-logs on Discord for more information",
+  "airdropping.reward.failed.title": "Airdrop failed",
   "sunflowerClock": "Sunflower Clock",
   "days.mon": "Mon.",
   "days.tue": "Tue.",
