--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6096,5 +6096,7 @@
   "blessing.offer": "Offer",
   "seeking.blessing": "Claiming blessing",
   "seeking.blessing.success": "Congratulations, you have received a blessing!",
-  "blessing.maxAmount": "Insufficient {{name}}."
+  "blessing.noResults": "No results found for this date",
+  "blessing.donated": "{amount} x {item} donated",
+  "blessing.winners": "{count} winners"
 }
