--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5794,13 +5794,13 @@
   "error.insufficientFlower": "Insufficient FLOWER",
   "gems": "Gems",
   "usd": "USD",
-  "transaction.deposit.flower": "Deposit $FLOWER",
+  "transaction.deposit.flower": "Deposit FLOWER",
   "transaction.swap.flowerForCoins": "Swap $FLOWER for Coins",
   "transaction.menu.title": "Select an option",
-  "deposit.flower": "Deposit $FLOWER",
+  "deposit.flower": "Deposit FLOWER",
   "deposit.flower.selectNetwork": "Select network",
   "deposit.flower.minimumDeposit": "Minimum deposit is 5 $FLOWER.",
-  "deposit.flower.onlyDeposit": "Only deposit $FLOWER to the selected network.",
+  "deposit.flower.onlyDeposit": "Only deposit FLOWER to the selected network.",
   "deposit.flower.processingTimes": "Processing times may vary depending on the network.",
   "deposit.flower.iUnderstand": "I understand",
   "deposit.flower.loading": "Loading...",
@@ -5808,7 +5808,10 @@
   "deposit.doNotSaveAddress": "Do not save this address as its subject to change",
   "deposit.flower.processedDeposits": "Processed deposits",
   "deposit.flower.refreshing": "Refreshing...",
+  "deposit.flower.depositFromDifferentWallet": "Deposit from a different wallet",
+  "deposit.flower.sendingTransaction": "Sending transaction...",
   "deposit.flower.refreshDeposit": "Refresh deposits",
+  "deposit.flower.noDeposits": "No deposits found",
   "faceRecognition.cooldownTitle": "Too many attempts",
   "faceRecognition.cooldownDescription": "Please wait before trying again.",
   "socialTask.referFriend": "Refer a friend",
