Mine Whack Beta

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -842,6 +842,10 @@
   "fruit-dash.portal.description": "Run through the farm, dodge obstacles, and collect delicious fruits.",
   "fruit-dash.portal.missionObjectives": "Mission: Reach {{targetScore}} points.",
   "fruit-dash.portal.rewardMessage": "Congratulations, you completed the mission! Here is your reward.",
+  "mine-whack.portal.title": "Minigame - Mine Wack",
+  "mine-whack.portal.description": "Tap the moles, dodge the rabbits, and race against time in this reflex challenge!",
+  "mine-whack.portal.missionObjectives": "Mission: Reach {{targetScore}} points.",
+  "mine-whack.portal.rewardMessage": "Congratulations, you completed the mission! Here is your reward.",
   "description.wicker.man": "Join hands and make a chain, the shadow of the Wicker Man will rise up again",
   "description.golden bonsai": "Goblins love bonsai too",
   "description.christmas.bear": "Santa's favorite",
@@ -5625,6 +5629,8 @@
   "portal.fruitDash.description": "Survive as long as you can collecting fruits while dodging obstacles in this endless challenge!",
   "portal.halloween.title": "Halloween",
   "portal.halloween.description": "Brave the haunted mansion, collect torches, and outrun ghosts in this spooky survival challenge!",
+  "portal.mineWhack.title": "Mine Wack",
+  "portal.mineWhack.description": "Tap the moles, dodge the rabbits, and race against time in this reflex challenge!",
   "recipes.upNext": "Up Next",
   "recipes.addToQueue": "Add to queue",
   "recipes.queue": "Queue",
