--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1857,6 +1857,7 @@
   "polygonscan": "PolygonScan",
   "potions": "Potions",
   "proof.of.humanity": "Proof of Humanity",
+  "proof.of.humanity.required": "Proof of Humanity required",
   "sflDiscord": "Sunflower Land Discord Server",
   "in.progress": "In Progress",
   "compost.complete": "Compost complete",
@@ -5521,6 +5522,7 @@
   "reputation.title": "Reputation",
   "reputation.description": "Increase your reputation to unlock more Web3 features!",
   "reputation.sprout.description": "1 Marketplace Listing per day",
+  "reputation.notAReputation": "You are not a {{name}}",
 
   "reputation.points": "{{amount}} Points",
   "reputation.points.title": "Reputation - {{name}}",
